--- a/css/style-c.css
+++ b/css/style-c.css
@@ -83,10 +83,35 @@ p {
 }
 
 .links1 {
-  color: #323fb1;
+  box-shadow: 3px 3px 3px #e09c9c;
+  border: 1px #ffcece;
+  border-style: solid;
+  border-radius: 4px;
+  background-color: #ffe0e0;
+  color: #000000;
+  text-decoration: none;
+  padding: 2px;
+  font-size: 16px;
+  font-family: "Raleway", sans-serif;
+}
+
+.links1:hover{
+  color: #5046a5;
+}
+
+a:hover {
+  color: #000000;
+}
+
+#voltar{
+  color: #000000;
   text-decoration: none;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+#voltar:hover {
+  color: #5046a5;
 }
 
 .fixed-button {
