--- a/css/style-e.css
+++ b/css/style-e.css
@@ -81,10 +81,35 @@ p {
 }
 
 .links1 {
+  box-shadow: 3px 3px 3px #0d0030;
+  border: 1px #bea7ff;
+  border-style: solid;
+  border-radius: 4px;
+  background-color: #bea7ff;
+  color: #000000;
+  text-decoration: none;
+  padding: 2px;
+  font-size: 16px;
+  font-family: "Raleway", sans-serif;
+}
+
+.links1:hover {
+  color: #5046a5;
+}
+
+a:hover{
+  color: #1a12af;
+}
+
+#voltar {
   color: #1a12af;
   text-decoration: none;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+#voltar:hover {
+  color: #5046a5;
 }
 
 .fixed-button {
