--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ main {
     position: absolute;
     top: 8vh;
     right: 0;
-    width: 100vw;
+    width: 100%;
     height: 92vh;
     background: linear-gradient(
       43deg,
