--- a/css/style.css
+++ b/css/style.css
@@ -81,12 +81,7 @@ main {
     right: 0;
     width: 100%;
     height: 92vh;
-    background: linear-gradient(
-      43deg,
-      rgba(165, 165, 165, 0.2),
-      rgb(109, 109, 109, 0.2),
-      rgb(56, 56, 56, 0.2)
-    );
+    background-color: #37373d;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
